fixed small issue with overflow on modal for mobile

--- a/src/css/_global.scss
+++ b/src/css/_global.scss
@@ -6,7 +6,6 @@
 
 html {
     position: relative;
-    overflow: hidden;
 }
 
 html,
