--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -215,11 +215,13 @@ grid-area: h;
     max-height: 0;
     width: 100%;
     transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
+    overflow: hidden;
 }
 
 .active-modal {
     max-height: 100%;
     transition: max-height 0.5s ease-in-out;
+    overflow: visible;
 }
 
 .modal {
